syntax = "proto3";

option java_package = "com.example.userservice";
option java_outer_classname = "UserServiceProto";

service UserService {
    rpc getUserById (UserRequest) returns (UserResponse);
}

message UserRequest {
    string user_id = 1;
}

message UserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}
